--- a/MAZE.qsf
+++ b/MAZE.qsf
@@ -49,23 +49,6 @@ set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE my_Sprite.sv
-set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
-set_global_assignment -name QIP_FILE vga_clk.qip
-set_global_assignment -name SYSTEMVERILOG_FILE ram.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_wallBouncer.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_spriteCollider.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_ScoreTracker.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_ScoreDisplay.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_ramForFire.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_maps.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_GameDesign.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_Fireball.sv
-set_global_assignment -name SYSTEMVERILOG_FILE my_Counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE lab8.sv
-set_global_assignment -name SYSTEMVERILOG_FILE HexDriver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Color_Mapper.sv
-set_global_assignment -name QIP_FILE lab8_soc/synthesis/lab8_soc.qip
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_N5 -to ADC_CLK_10
@@ -260,4 +243,33 @@ set_location_assignment PIN_P11 -to Clk
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
 set_location_assignment PIN_P11 -to MAX10_CLK1_50
+set_global_assignment -name ENABLE_OCT_DONE ON
+set_global_assignment -name EXTERNAL_FLASH_FALLBACK_ADDRESS 00000000
+set_global_assignment -name USE_CONFIGURATION_DEVICE OFF
+set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE IMAGE WITH ERAM"
+set_global_assignment -name CRC_ERROR_OPEN_DRAIN OFF
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
+set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
+set_global_assignment -name QIP_FILE maze1.qip
+set_global_assignment -name SYSTEMVERILOG_FILE my_Sprite.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA_controller.sv
+set_global_assignment -name QIP_FILE vga_clk.qip
+set_global_assignment -name SYSTEMVERILOG_FILE ram.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_wallBouncer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_spriteCollider.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_ScoreTracker.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_ScoreDisplay.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_ramForFire.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_maps.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_GameDesign.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_Fireball.sv
+set_global_assignment -name SYSTEMVERILOG_FILE my_Counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE lab8.sv
+set_global_assignment -name SYSTEMVERILOG_FILE HexDriver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Color_Mapper.sv
+set_global_assignment -name QIP_FILE lab8_soc/synthesis/lab8_soc.qip
+set_global_assignment -name MIF_FILE maze1/maze1.mif
+set_global_assignment -name MIF_FILE maze1.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
